full layout without responsivness

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tajam</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="styles/reset.css" />
@@ -318,10 +319,10 @@
                         <div class="footer-pic">
                             <img src="img/location.png" alt="location"/>
                         </div>
-
+                        
                         <div class="location">
                             Ruko cucruk, Jl. Radio luar dalem jos <br> No.12 - 13, Kalideres - Jakarta Barat <br>11480 - Indonesia
-                        </div>
+                        </div>    
                     </div>
 
                     <div class="footer-content">
@@ -369,7 +370,7 @@
                     </div>
                     </div>
                 </div>
-            </div>
+            <!-- </div> -->
 
             <div class="last-row">
                 <div class="last-row-column">
